<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_main"
    android:padding="30dp">

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Industrial Master"
        android:textSize="25sp"
        android:padding="20dp"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:background="@color/colorPrimaryText"
        android:elevation="10dp"
        />-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/logo"
        android:scaleType="centerInside"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/username"
        android:textSize="20sp"
        android:gravity="bottom"
        android:hint=""/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textSize="17sp"/>

    <!--android:gravity="bottom|right" we use 2 attributes values using "|" -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/password"
        android:textSize="20sp"
        android:gravity="bottom"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:textSize="17sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/forgot_password"
        android:textSize="13sp"
        android:gravity="top|right"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:layout_height="match_parent"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:background="@color/colorPrimaryText"
            android:layout_marginRight="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_height="match_parent"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:background="@color/colorPrimaryText"
            android:layout_marginLeft="5dp"
            android:onClick="login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:gravity="right"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:layout_width="0sp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="left"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>